<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/simple_button"
        android:text="@string/launch_simple_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/list_button"
        android:text="@string/launch_list_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/multi_list_button"
        android:text="@string/launch_multi_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/custom_dialog_button"
        android:text="@string/launch_custom_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/time_picker_dialog_button"
        android:text="@string/launch_time_picker_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Button>
    <Button
        android:id="@+id/date_picker_dialog_button"
        android:text="@string/launch_date_picker_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Button>


</LinearLayout>

